--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Specialization/Delete.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Specialization/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Specialization delete</h2>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
