--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_LayoutLogin.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_LayoutLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">Content/plugins/fonts/glyph
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
